[package]
name = "d3d12rs"
version = "0.1.0"
authors = ["Clemens Wasser <clemens.wasser@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.22.2"
raw-window-handle = "0.3.3"
winapi = { version = "0.3.8", features = [  "dxgi", "dxgi1_2", "dxgi1_3", "dxgi1_4",
                                            "dxgi1_5","dxgi1_6", "winerror", "d3d12",
                                            "d3d12sdklayers", "d3dcommon", "unknwnbase",
                                            "impl-default", "impl-debug", "windef", "dxgiformat", "dxgitype",
                                            "d3dcompiler", "synchapi", "winnt", "winbase",
                                            "handleapi" ] }
directx_math= "0.1.0"
libc = "0.2.71"